reference/5.1/Microsoft.PowerShell.Core/About/about_Numeric_Literals.md
---
description: 整數和實數常值都可以有型別和乘數尾碼。
Locale: en-US
ms.date: 04/09/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_numeric_literals?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: 關於數值常值
ms.openlocfilehash: 99fa8c1a751551d028fe6df0b0cec94e07f19c59
ms.sourcegitcommit: ae8b89e12c6fa2108075888dd6da92788d6c2888
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 10/21/2020
ms.locfileid: "93208767"
---
# <a name="about-numeric-literals"></a><span data-ttu-id="ed261-103">關於數值常值</span><span class="sxs-lookup"><span data-stu-id="ed261-103">About numeric literals</span></span>

<span data-ttu-id="ed261-104">數值常值有兩種：整數和實數。</span><span class="sxs-lookup"><span data-stu-id="ed261-104">There are two kinds of numeric literals: integer and real.</span></span> <span data-ttu-id="ed261-105">兩者都可以有類型和乘數尾碼。</span><span class="sxs-lookup"><span data-stu-id="ed261-105">Both can have type and multiplier suffixes.</span></span>

## <a name="integer-literals"></a><span data-ttu-id="ed261-106">整數常值</span><span class="sxs-lookup"><span data-stu-id="ed261-106">Integer literals</span></span>

<span data-ttu-id="ed261-107">整數常值可以用十進位或十六進位標記法來撰寫。</span><span class="sxs-lookup"><span data-stu-id="ed261-107">Integer literals can be written in decimal or hexadecimal notation.</span></span> <span data-ttu-id="ed261-108">十六進位常值的前面會加上 `0x` ，以區別它們與十進位數。</span><span class="sxs-lookup"><span data-stu-id="ed261-108">Hexadecimal literals are prefixed with `0x` to distinguish them from decimal numbers.</span></span>

<span data-ttu-id="ed261-109">整數常值可以有型別尾碼和乘數尾碼。</span><span class="sxs-lookup"><span data-stu-id="ed261-109">Integer literals can have a type suffix and a multiplier suffix.</span></span>

| <span data-ttu-id="ed261-110">後置詞</span><span class="sxs-lookup"><span data-stu-id="ed261-110">Suffix</span></span> |       <span data-ttu-id="ed261-111">意義</span><span class="sxs-lookup"><span data-stu-id="ed261-111">Meaning</span></span>       |
| ------ | ------------------- |
| <span data-ttu-id="ed261-112">l</span><span class="sxs-lookup"><span data-stu-id="ed261-112">l</span></span>      | <span data-ttu-id="ed261-113">long 資料類型</span><span class="sxs-lookup"><span data-stu-id="ed261-113">long data type</span></span>      |
| <span data-ttu-id="ed261-114">kb</span><span class="sxs-lookup"><span data-stu-id="ed261-114">kb</span></span>     | <span data-ttu-id="ed261-115">千位元組乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-115">kilobyte multiplier</span></span> |
| <span data-ttu-id="ed261-116">mb</span><span class="sxs-lookup"><span data-stu-id="ed261-116">mb</span></span>     | <span data-ttu-id="ed261-117">mb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-117">megabyte multiplier</span></span> |
| <span data-ttu-id="ed261-118">G b</span><span class="sxs-lookup"><span data-stu-id="ed261-118">gb</span></span>     | <span data-ttu-id="ed261-119">gb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-119">gigabyte multiplier</span></span> |
| <span data-ttu-id="ed261-120">結核病</span><span class="sxs-lookup"><span data-stu-id="ed261-120">tb</span></span>     | <span data-ttu-id="ed261-121">tb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-121">terabyte multiplier</span></span> |
| <span data-ttu-id="ed261-122">鉛</span><span class="sxs-lookup"><span data-stu-id="ed261-122">pb</span></span>     | <span data-ttu-id="ed261-123">pb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-123">petabyte multiplier</span></span> |

<span data-ttu-id="ed261-124">整數常值的類型是由其值、類型尾碼和數位乘數尾碼來決定。</span><span class="sxs-lookup"><span data-stu-id="ed261-124">The type of an integer literal is determined by its value, the type suffix, and the numeric multiplier suffix.</span></span>

<span data-ttu-id="ed261-125">針對沒有類型尾碼的整數常值：</span><span class="sxs-lookup"><span data-stu-id="ed261-125">For an integer literal with no type suffix:</span></span>

- <span data-ttu-id="ed261-126">如果值可由類型表示 `[int]` ，則為其類型。</span><span class="sxs-lookup"><span data-stu-id="ed261-126">If the value can be represented by type `[int]`, that is its type.</span></span>
- <span data-ttu-id="ed261-127">否則，如果值可由類型表示 `[long]` ，則為其類型。</span><span class="sxs-lookup"><span data-stu-id="ed261-127">Otherwise, if the value can be represented by type `[long]`, that is its type.</span></span>
- <span data-ttu-id="ed261-128">否則，如果值可由類型表示 `[decimal]` ，則為其類型。</span><span class="sxs-lookup"><span data-stu-id="ed261-128">Otherwise, if the value can be represented by type `[decimal]`, that is its type.</span></span>
- <span data-ttu-id="ed261-129">否則，它會以類型表示 `[double]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-129">Otherwise, it is represented by type `[double]`.</span></span>

<span data-ttu-id="ed261-130">針對具有類型尾碼的整數常值：</span><span class="sxs-lookup"><span data-stu-id="ed261-130">For an integer literal with a type suffix:</span></span>

- <span data-ttu-id="ed261-131">如果類型後置詞為 `u` ，而且值可由類型表示， `[int]` 則其型別為 `[int]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-131">If the type suffix is `u` and the value can be represented by type `[int]` then its type is `[int]`.</span></span>
- <span data-ttu-id="ed261-132">如果類型後置詞為 `u` ，而且值可由類型表示， `[long]` 則其型別為 `[long]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-132">If the type suffix is `u` and the value can be represented by type `[long]` then its type is `[long]`.</span></span>
- <span data-ttu-id="ed261-133">如果其值可由指定的類型表示，則為其類型。</span><span class="sxs-lookup"><span data-stu-id="ed261-133">If its value can be represented by type specified then that is its type.</span></span>
- <span data-ttu-id="ed261-134">否則，該常值的格式不正確。</span><span class="sxs-lookup"><span data-stu-id="ed261-134">Otherwise, that literal is malformed.</span></span>

## <a name="real-literals"></a><span data-ttu-id="ed261-135">實際常值</span><span class="sxs-lookup"><span data-stu-id="ed261-135">Real literals</span></span>

<span data-ttu-id="ed261-136">實際常值只能以十進位標記法撰寫。</span><span class="sxs-lookup"><span data-stu-id="ed261-136">Real literals can only be written in decimal notation.</span></span> <span data-ttu-id="ed261-137">此標記法可包含使用指數部分之後，以小數點和科學記號標記法之後的小數值。</span><span class="sxs-lookup"><span data-stu-id="ed261-137">This notation can include fractional values following a decimal point and scientific notation using an exponential part.</span></span>

<span data-ttu-id="ed261-138">指數部分包含 ' e '，後面接著選擇性的正負號 (+/-) 和代表指數的數位。</span><span class="sxs-lookup"><span data-stu-id="ed261-138">The exponential part includes an 'e' followed by an optional sign (+/-) and a number representing the exponent.</span></span> <span data-ttu-id="ed261-139">例如，常值 `1e2` 等於數位值100。</span><span class="sxs-lookup"><span data-stu-id="ed261-139">For example, the literal value `1e2` equals the numeric value 100.</span></span>

<span data-ttu-id="ed261-140">實際常值可以有型別尾碼和乘數尾碼。</span><span class="sxs-lookup"><span data-stu-id="ed261-140">Real literals can have a type suffix and a multiplier suffix.</span></span>

| <span data-ttu-id="ed261-141">後置詞</span><span class="sxs-lookup"><span data-stu-id="ed261-141">Suffix</span></span> |       <span data-ttu-id="ed261-142">意義</span><span class="sxs-lookup"><span data-stu-id="ed261-142">Meaning</span></span>       |
| ------ | ------------------- |
| <span data-ttu-id="ed261-143">d</span><span class="sxs-lookup"><span data-stu-id="ed261-143">d</span></span>      | <span data-ttu-id="ed261-144">十進位資料類型</span><span class="sxs-lookup"><span data-stu-id="ed261-144">decimal data type</span></span>   |
| <span data-ttu-id="ed261-145">kb</span><span class="sxs-lookup"><span data-stu-id="ed261-145">kb</span></span>     | <span data-ttu-id="ed261-146">千位元組乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-146">kilobyte multiplier</span></span> |
| <span data-ttu-id="ed261-147">mb</span><span class="sxs-lookup"><span data-stu-id="ed261-147">mb</span></span>     | <span data-ttu-id="ed261-148">mb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-148">megabyte multiplier</span></span> |
| <span data-ttu-id="ed261-149">G b</span><span class="sxs-lookup"><span data-stu-id="ed261-149">gb</span></span>     | <span data-ttu-id="ed261-150">gb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-150">gigabyte multiplier</span></span> |
| <span data-ttu-id="ed261-151">結核病</span><span class="sxs-lookup"><span data-stu-id="ed261-151">tb</span></span>     | <span data-ttu-id="ed261-152">tb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-152">terabyte multiplier</span></span> |
| <span data-ttu-id="ed261-153">鉛</span><span class="sxs-lookup"><span data-stu-id="ed261-153">pb</span></span>     | <span data-ttu-id="ed261-154">pb 乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-154">petabyte multiplier</span></span> |

<span data-ttu-id="ed261-155">實際常值有兩種： double 和 decimal。</span><span class="sxs-lookup"><span data-stu-id="ed261-155">There are two kinds of real literal: double and decimal.</span></span> <span data-ttu-id="ed261-156">這些是以不存在或目前狀態來表示的十進位類型尾碼。</span><span class="sxs-lookup"><span data-stu-id="ed261-156">These are indicated by the absence or presence, respectively, of decimal-type suffix.</span></span> <span data-ttu-id="ed261-157">PowerShell 不支援值的常值標記法 `[float]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-157">PowerShell does not support a literal representation of a `[float]` value.</span></span> <span data-ttu-id="ed261-158">Double 實數常值具有類型 `[double]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-158">A double real literal has type `[double]`.</span></span> <span data-ttu-id="ed261-159">Decimal 實數常值具有類型 `[decimal]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-159">A decimal real literal has type `[decimal]`.</span></span>
<span data-ttu-id="ed261-160">Decimal 實數常值小數部分的尾端零是很重要的。</span><span class="sxs-lookup"><span data-stu-id="ed261-160">Trailing zeros in the fraction part of a decimal real literal are significant.</span></span>

<span data-ttu-id="ed261-161">如果實際常值中指數部分的位數值 `[double]` 小於支援的最小值，則該實數常值的值 `[double]` 為0。</span><span class="sxs-lookup"><span data-stu-id="ed261-161">If the value of exponent-part's digits in a `[double]` real literal is less than the minimum supported, the value of that `[double]` real literal is 0.</span></span> <span data-ttu-id="ed261-162">如果實際常值中指數部分的位數值 `[decimal]` 小於支援的最小值，則常值的格式不正確。</span><span class="sxs-lookup"><span data-stu-id="ed261-162">If the value of exponent-part's digits in a `[decimal]` real literal is less than the minimum supported, that literal is malformed.</span></span> <span data-ttu-id="ed261-163">如果指數部分數位在或實數常值中的 `[double]` 值 `[decimal]` 大於支援的最大值，則常值的格式不正確。</span><span class="sxs-lookup"><span data-stu-id="ed261-163">If the value of exponent-part's digits in a `[double]` or `[decimal]` real literal is greater than the maximum supported, that literal is malformed.</span></span>

> [!NOTE]
> <span data-ttu-id="ed261-164">語法允許雙重實數常值具有長型別尾碼。</span><span class="sxs-lookup"><span data-stu-id="ed261-164">The syntax permits a double real literal to have a long-type suffix.</span></span>
> <span data-ttu-id="ed261-165">PowerShell 會將此案例視為整數常值，其值會以類型表示 `[long]` 。</span><span class="sxs-lookup"><span data-stu-id="ed261-165">PowerShell treats this case as an integer literal whose value is represented by type `[long]`.</span></span> <span data-ttu-id="ed261-166">這項功能已保留，以便與舊版 PowerShell 回溯相容。</span><span class="sxs-lookup"><span data-stu-id="ed261-166">This feature has been retained for backwards compatibility with earlier versions of PowerShell.</span></span> <span data-ttu-id="ed261-167">不過，程式設計人員不建議使用此表單的整數常值，因為它們可以輕鬆地遮蔽常值的實際值。</span><span class="sxs-lookup"><span data-stu-id="ed261-167">However, programmers are discouraged from using integer literals of this form as they can easily obscure the literal's actual value.</span></span> <span data-ttu-id="ed261-168">例如， `1.2L` 具有值1、 `1.2345e1L` 具有值12，而且 `1.2345e-5L` 值為0，則不會立即明顯。</span><span class="sxs-lookup"><span data-stu-id="ed261-168">For example, `1.2L` has value 1, `1.2345e1L` has value 12, and `1.2345e-5L` has value 0, none of which are immediately obvious.</span></span>

## <a name="numeric-multipliers"></a><span data-ttu-id="ed261-169">數值乘數</span><span class="sxs-lookup"><span data-stu-id="ed261-169">Numeric multipliers</span></span>

<span data-ttu-id="ed261-170">為了方便起見，整數和實數常值可以包含數值乘數，這表示一組常用的2種常用電源。</span><span class="sxs-lookup"><span data-stu-id="ed261-170">For convenience, integer and real literals can contain a numeric multiplier, which indicates one of a set of commonly used powers of 2.</span></span> <span data-ttu-id="ed261-171">您可以用任何大寫或小寫字母的組合來寫入數值乘數。</span><span class="sxs-lookup"><span data-stu-id="ed261-171">The numeric multiplier can be written in any combination of upper or lowercase letters.</span></span>

<span data-ttu-id="ed261-172">乘數尾碼可以與 `u` 、 `ul` 和 `l` 類型尾碼搭配使用。</span><span class="sxs-lookup"><span data-stu-id="ed261-172">The multiplier suffixes can be used in combination with the `u`, `ul`, and `l` type suffixes.</span></span>

### <a name="multiplier-examples"></a><span data-ttu-id="ed261-173">乘數範例</span><span class="sxs-lookup"><span data-stu-id="ed261-173">Multiplier examples</span></span>

```
PS> 1kb
1024

PS> 1.30Dmb
1363148.80

PS> 0x10Gb
17179869184

PS> 1.4e23tb
1.5393162788864E+35

PS> 0x12Lpb
20266198323167232
```

## <a name="numeric-type-accelerators"></a><span data-ttu-id="ed261-174">數數值型別加速器</span><span class="sxs-lookup"><span data-stu-id="ed261-174">Numeric type accelerators</span></span>

<span data-ttu-id="ed261-175">PowerShell 支援下列類型加速器：</span><span class="sxs-lookup"><span data-stu-id="ed261-175">PowerShell supports the following type accelerators:</span></span>

| <span data-ttu-id="ed261-176">加速器</span><span class="sxs-lookup"><span data-stu-id="ed261-176">Accelerator</span></span> |         <span data-ttu-id="ed261-177">注意</span><span class="sxs-lookup"><span data-stu-id="ed261-177">Note</span></span>         |           <span data-ttu-id="ed261-178">Description</span><span class="sxs-lookup"><span data-stu-id="ed261-178">Description</span></span>            |
| ----------- | -------------------- | -------------------------------- |
| `[byte]`    |                      | <span data-ttu-id="ed261-179">Byte (不帶正負號的) </span><span class="sxs-lookup"><span data-stu-id="ed261-179">Byte (unsigned)</span></span>                  |
| `[sbyte]`   |                      | <span data-ttu-id="ed261-180">已簽署的位元組 () </span><span class="sxs-lookup"><span data-stu-id="ed261-180">Byte (signed)</span></span>                    |
| `[Int16]`   |                      | <span data-ttu-id="ed261-181">16位整數</span><span class="sxs-lookup"><span data-stu-id="ed261-181">16-bit integer</span></span>                   |
| `[UInt16]`  |                      | <span data-ttu-id="ed261-182">16位整數 (不帶正負號的) </span><span class="sxs-lookup"><span data-stu-id="ed261-182">16-bit integer (unsigned)</span></span>        |
| `[Int32]`   |                      | <span data-ttu-id="ed261-183">32 位元整數</span><span class="sxs-lookup"><span data-stu-id="ed261-183">32-bit integer</span></span>                   |
| `[int]`     | <span data-ttu-id="ed261-184">的別名 `[int32]`</span><span class="sxs-lookup"><span data-stu-id="ed261-184">alias for `[int32]`</span></span>  | <span data-ttu-id="ed261-185">32 位元整數</span><span class="sxs-lookup"><span data-stu-id="ed261-185">32-bit integer</span></span>                   |
| `[UInt32]`  |                      | <span data-ttu-id="ed261-186">32位整數 (不帶正負號的) </span><span class="sxs-lookup"><span data-stu-id="ed261-186">32-bit integer (unsigned)</span></span>        |
| `[Int64]`   |                      | <span data-ttu-id="ed261-187">64 位元整數</span><span class="sxs-lookup"><span data-stu-id="ed261-187">64-bit integer</span></span>                   |
| `[long]`    | <span data-ttu-id="ed261-188">的別名 `[int64]`</span><span class="sxs-lookup"><span data-stu-id="ed261-188">alias for `[int64]`</span></span>  | <span data-ttu-id="ed261-189">64 位元整數</span><span class="sxs-lookup"><span data-stu-id="ed261-189">64-bit integer</span></span>                   |
| `[UInt64]`  |                      | <span data-ttu-id="ed261-190">64位整數 (不帶正負號的) </span><span class="sxs-lookup"><span data-stu-id="ed261-190">64-bit integer (unsigned)</span></span>        |
| `[bigint]`  |                      | <span data-ttu-id="ed261-191">請參閱 [BigInteger 結構][bigint]</span><span class="sxs-lookup"><span data-stu-id="ed261-191">See [BigInteger Struct][bigint]</span></span>  |
| `[single]`  |                      | <span data-ttu-id="ed261-192">單精確度浮點數</span><span class="sxs-lookup"><span data-stu-id="ed261-192">Single precision floating point</span></span>  |
| `[float]`   | <span data-ttu-id="ed261-193">的別名 `[single]`</span><span class="sxs-lookup"><span data-stu-id="ed261-193">alias for `[single]`</span></span> | <span data-ttu-id="ed261-194">單精確度浮點數</span><span class="sxs-lookup"><span data-stu-id="ed261-194">Single precision floating point</span></span>  |
| `[double]`  |                      | <span data-ttu-id="ed261-195">雙精確度浮點數</span><span class="sxs-lookup"><span data-stu-id="ed261-195">Double precision floating point</span></span>  |
| `[decimal]` |                      | <span data-ttu-id="ed261-196">128位浮點數</span><span class="sxs-lookup"><span data-stu-id="ed261-196">128-bit floating point</span></span>           |

### <a name="working-with-other-numeric-types"></a><span data-ttu-id="ed261-197">使用其他數數值型別</span><span class="sxs-lookup"><span data-stu-id="ed261-197">Working with other numeric types</span></span>

<span data-ttu-id="ed261-198">若要使用任何其他數數值型別，您必須使用類型加速器，而不會有一些問題。</span><span class="sxs-lookup"><span data-stu-id="ed261-198">To work with any other numeric types you must use type accelerators, which is not without some problems.</span></span> <span data-ttu-id="ed261-199">例如，高整數值在轉換成任何其他類型之前，一律會剖析為雙精度浮點數。</span><span class="sxs-lookup"><span data-stu-id="ed261-199">For example, high integer values are always parsed as double before being cast to any other type.</span></span>

```
PS> [bigint]111111111111111111111111111111111111111111111111111111
111111111111111100905595216014112456735339620444667904
```

<span data-ttu-id="ed261-200">此值會先剖析為雙精度浮點數，並在較高的範圍中遺失有效位數。</span><span class="sxs-lookup"><span data-stu-id="ed261-200">The value is parsed as a double first, losing precision in the higher ranges.</span></span>
<span data-ttu-id="ed261-201">若要避免這個問題，請將值輸入為字串，然後將它們轉換：</span><span class="sxs-lookup"><span data-stu-id="ed261-201">To avoid this problem, enter values as strings and then convert them:</span></span>

```
PS> [bigint]'111111111111111111111111111111111111111111111111111111'
111111111111111111111111111111111111111111111111111111
```

## <a name="examples"></a><span data-ttu-id="ed261-202">範例</span><span class="sxs-lookup"><span data-stu-id="ed261-202">Examples</span></span>

<span data-ttu-id="ed261-203">下表包含數個數值常值的範例，並列出其類型和值：</span><span class="sxs-lookup"><span data-stu-id="ed261-203">The following table contains several examples of numeric literals and lists their type and value:</span></span>

|  <span data-ttu-id="ed261-204">數字</span><span class="sxs-lookup"><span data-stu-id="ed261-204">Number</span></span>  |  <span data-ttu-id="ed261-205">類型</span><span class="sxs-lookup"><span data-stu-id="ed261-205">Type</span></span>   |    <span data-ttu-id="ed261-206">值</span><span class="sxs-lookup"><span data-stu-id="ed261-206">Value</span></span>     |
| -------: | ------- | -----------: |
|      <span data-ttu-id="ed261-207">100</span><span class="sxs-lookup"><span data-stu-id="ed261-207">100</span></span> | <span data-ttu-id="ed261-208">Int32</span><span class="sxs-lookup"><span data-stu-id="ed261-208">Int32</span></span>   |          <span data-ttu-id="ed261-209">100</span><span class="sxs-lookup"><span data-stu-id="ed261-209">100</span></span> |
|     <span data-ttu-id="ed261-210">100D</span><span class="sxs-lookup"><span data-stu-id="ed261-210">100D</span></span> | <span data-ttu-id="ed261-211">Decimal</span><span class="sxs-lookup"><span data-stu-id="ed261-211">Decimal</span></span> |          <span data-ttu-id="ed261-212">100</span><span class="sxs-lookup"><span data-stu-id="ed261-212">100</span></span> |
|     <span data-ttu-id="ed261-213">100l</span><span class="sxs-lookup"><span data-stu-id="ed261-213">100l</span></span> | <span data-ttu-id="ed261-214">Int64</span><span class="sxs-lookup"><span data-stu-id="ed261-214">Int64</span></span>   |          <span data-ttu-id="ed261-215">100</span><span class="sxs-lookup"><span data-stu-id="ed261-215">100</span></span> |
|      <span data-ttu-id="ed261-216">1e2</span><span class="sxs-lookup"><span data-stu-id="ed261-216">1e2</span></span> | <span data-ttu-id="ed261-217">Double</span><span class="sxs-lookup"><span data-stu-id="ed261-217">Double</span></span>  |          <span data-ttu-id="ed261-218">100</span><span class="sxs-lookup"><span data-stu-id="ed261-218">100</span></span> |
|     <span data-ttu-id="ed261-219">1. e2</span><span class="sxs-lookup"><span data-stu-id="ed261-219">1.e2</span></span> | <span data-ttu-id="ed261-220">Double</span><span class="sxs-lookup"><span data-stu-id="ed261-220">Double</span></span>  |          <span data-ttu-id="ed261-221">100</span><span class="sxs-lookup"><span data-stu-id="ed261-221">100</span></span> |
|    <span data-ttu-id="ed261-222">0x1e2</span><span class="sxs-lookup"><span data-stu-id="ed261-222">0x1e2</span></span> | <span data-ttu-id="ed261-223">Int32</span><span class="sxs-lookup"><span data-stu-id="ed261-223">Int32</span></span>   |          <span data-ttu-id="ed261-224">482</span><span class="sxs-lookup"><span data-stu-id="ed261-224">482</span></span> |
|   <span data-ttu-id="ed261-225">0x1e2L</span><span class="sxs-lookup"><span data-stu-id="ed261-225">0x1e2L</span></span> | <span data-ttu-id="ed261-226">Int64</span><span class="sxs-lookup"><span data-stu-id="ed261-226">Int64</span></span>   |          <span data-ttu-id="ed261-227">482</span><span class="sxs-lookup"><span data-stu-id="ed261-227">482</span></span> |
|   <span data-ttu-id="ed261-228">0x1e2D</span><span class="sxs-lookup"><span data-stu-id="ed261-228">0x1e2D</span></span> | <span data-ttu-id="ed261-229">Int32</span><span class="sxs-lookup"><span data-stu-id="ed261-229">Int32</span></span>   |         <span data-ttu-id="ed261-230">7725</span><span class="sxs-lookup"><span data-stu-id="ed261-230">7725</span></span> |
|     <span data-ttu-id="ed261-231">482D</span><span class="sxs-lookup"><span data-stu-id="ed261-231">482D</span></span> | <span data-ttu-id="ed261-232">Decimal</span><span class="sxs-lookup"><span data-stu-id="ed261-232">Decimal</span></span> |          <span data-ttu-id="ed261-233">482</span><span class="sxs-lookup"><span data-stu-id="ed261-233">482</span></span> |
|    <span data-ttu-id="ed261-234">482gb</span><span class="sxs-lookup"><span data-stu-id="ed261-234">482gb</span></span> | <span data-ttu-id="ed261-235">Int64</span><span class="sxs-lookup"><span data-stu-id="ed261-235">Int64</span></span>   | <span data-ttu-id="ed261-236">517543559168</span><span class="sxs-lookup"><span data-stu-id="ed261-236">517543559168</span></span> |
| <span data-ttu-id="ed261-237">0x1e2lgb</span><span class="sxs-lookup"><span data-stu-id="ed261-237">0x1e2lgb</span></span> | <span data-ttu-id="ed261-238">Int64</span><span class="sxs-lookup"><span data-stu-id="ed261-238">Int64</span></span>   | <span data-ttu-id="ed261-239">517543559168</span><span class="sxs-lookup"><span data-stu-id="ed261-239">517543559168</span></span> |

### <a name="commands-that-look-like-numeric-literals"></a><span data-ttu-id="ed261-240">看起來像是數值常值的命令</span><span class="sxs-lookup"><span data-stu-id="ed261-240">Commands that look like numeric literals</span></span>

<span data-ttu-id="ed261-241">任何看起來像數值常值的命令都必須使用呼叫運算子 () 來執行 `&` ，否則會被解釋為相關聯類型的數位。</span><span class="sxs-lookup"><span data-stu-id="ed261-241">Any command that looks like a numeric literal must be executed using the the call operator (`&`), otherwise it is interpreted as a number of the associated type.</span></span>

### <a name="access-properties-and-methods-of-numeric-objects"></a><span data-ttu-id="ed261-242">存取數值物件的屬性和方法</span><span class="sxs-lookup"><span data-stu-id="ed261-242">Access properties and methods of numeric objects</span></span>

<span data-ttu-id="ed261-243">若要存取數值常值的成員，在某些情況下，您需要用括弧括住常值。</span><span class="sxs-lookup"><span data-stu-id="ed261-243">To access a member of a numeric literal, there are cases when you need to enclose the literal in parentheses.</span></span>

- <span data-ttu-id="ed261-244">常值沒有小數點</span><span class="sxs-lookup"><span data-stu-id="ed261-244">The literal does not have a decimal point</span></span>
- <span data-ttu-id="ed261-245">常值在小數點後面沒有任何數位</span><span class="sxs-lookup"><span data-stu-id="ed261-245">The literal does not have any digits following the decimal point</span></span>
- <span data-ttu-id="ed261-246">常值沒有尾碼</span><span class="sxs-lookup"><span data-stu-id="ed261-246">The literal does not have a suffix</span></span>

<span data-ttu-id="ed261-247">例如，下列範例會失敗：</span><span class="sxs-lookup"><span data-stu-id="ed261-247">For example, the following example fails:</span></span>

```
PS> 2.GetType().Name
At line:1 char:11
+ 2.GetType().Name
+           ~
An expression was expected after '('.
+ CategoryInfo          : ParserError: (:) [], ParentContainsErrorRecordException
+ FullyQualifiedErrorId : ExpectedExpression
```

<span data-ttu-id="ed261-248">下列範例可運作：</span><span class="sxs-lookup"><span data-stu-id="ed261-248">The following examples work:</span></span>

```
PS> 2L.GetType().Name
Int64
PS> 1.234.GetType().Name
Double
PS> (2).GetType().Name
Int32
```

<span data-ttu-id="ed261-249">前兩個範例的運作方式不會將常值括在括弧中，因為 PowerShell 剖析器可以判斷數值常值結束的位置，以及 **GetType** 方法的啟動位置。</span><span class="sxs-lookup"><span data-stu-id="ed261-249">The first two examples work without enclosing the literal value in parentheses because the PowerShell parser can determine where the numeric literal ends and the **GetType** method starts.</span></span>

<!-- reference links -->
[bigint]: /dotnet/api/system.numerics.biginteger
